[gd_scene load_steps=7 format=3 uid="uid://b5uyful5m0wg5"]

[ext_resource type="FontFile" uid="uid://br01odh1twpni" path="res://shared/fonts/aldo_the_apache/AldotheApache.ttf" id="1"]
[ext_resource type="Script" path="res://scenes/ui/stage_clear/stage_clear.gd" id="2"]
[ext_resource type="Shader" path="res://scenes/ui/stage_clear/effects/blur.gdshader" id="2_tpdoi"]
[ext_resource type="Theme" uid="uid://8wej1kve5gix" path="res://scenes/ui/shared/theme.tres" id="3_ihxgv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ntget"]
shader = ExtResource("2_tpdoi")
shader_parameter/lod = 1.5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_twbca"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="StageClear" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="Blur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ntget")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -546.0
offset_top = 72.0
offset_right = 546.0
offset_bottom = 286.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 200
theme_override_styles/normal = SubResource("StyleBoxFlat_twbca")
text = "STAGE CLEAR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -472.0
offset_top = -186.0
offset_right = 472.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "TIME"

[node name="Label2" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "EARLY BUMPS"

[node name="Label5" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "LATE BUMPS"

[node name="Label6" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "PERFECT BUMPS"

[node name="Label3" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "BALL BOUNCES"

[node name="Label4" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "Score"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Time" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "10000"

[node name="EarlyBumps" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "50"

[node name="LateBumps" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "50"

[node name="PerfectBumps" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "50"

[node name="Bounces" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "120"

[node name="Score" type="Label" parent="VBoxContainer2/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "1000000"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer2"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 80
text = "FINAL SCORE"

[node name="FinalScore" type="Label" parent="VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 80
text = "10010170"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -224.0
offset_top = -176.0
offset_right = 224.0
offset_bottom = -80.0

[node name="NextBtn" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_vertical = 2
theme = ExtResource("3_ihxgv")
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 80
text = "NEXT"

[connection signal="pressed" from="VBoxContainer/NextBtn" to="." method="_on_NextBtn_pressed"]
